2003-07-21  
	* replaced obsolete ftime function by gettimeofday

2003-07-20  
	* fixed bug that caused *L files be saved as REL
	* do_open returns status 0 or 4 (if File!Found), ignored on wedge side

2003-03-08  
	* steps toward IEC ATN discovery on server side
	* fixes in t64 and ufs stuff

2001-12-25  
	* merged wedges
	* added lowlevel time and date functions

2001-12-23  
	* serial cable version (requires Swiftlink)
	* BeOS parallel port confirmed working

2001-12-21   
	* BeOS port (with I/O, but not tested)

2001-09-21  
	* Win32 port is fully working (opendir needs to have '/' stripped from the end)

2001-09-20  
	* added LOPT in Makefile for Solaris (wohoo! it compiles and works!)
	* added missing netinet/in.h (with sockaddr_in) to includes
	* removed bug that prevented other shellutils from working
	* removed bug that prevented media_NET from displaying directory
	* media_NET seems to work, disabled O_NONBLOCK setting mode that
	  caused errors in 64shell, maybe need to reenable it again later
	* written BASIC example for media_NET - mailsend
	* media_NET closes file after client disconnect
	* made system somewhat more quiet
	* added LOPT in Makefile and changes for FreeBSD (wohoo! it compiles and works!)

2001-09-19  
	* after LOAD endadress is reported correctly
	* fixed Win32 networking stuff
	* 'F' commands now send transfermode byte before data page
	* added fishload/fishsave/timeout options to config file
	* fixed fishload, fishsave is FOOBAR and will remain as such
	    it _must_ work, but it does not...
	* fixed EOF handling, older LNG bugs
	* wedge for C128 works
	* basic support for M-R and M-W commands
	* added signal handlers to main

2001-09-18  
	* cleaned up resman.c, some update notes, various client machines support
	* moved open/close/chkin/out to server side
	* modified BOOT function
	* added VERIFY code

2001-09-16  
	* cleanups in target-depended stuff
	* prepared Win32 port, added inpout32.dll (all for MingW)

2001-06-16  
